[gd_scene load_steps=9 format=2]

[ext_resource path="res://src/dreamscape/Artifacts/ArtifactTemplate.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/dreamscape/Memories/MemoryTemplate.gd" type="Script" id=2]
[ext_resource path="res://assets/icons/artifacts/boss-key.png" type="Texture" id=3]
[ext_resource path="res://shaders/grayscale.shader" type="Shader" id=4]
[ext_resource path="res://shaders/MovingGradient.shader" type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=1]
shader = ExtResource( 4 )
shader_param/percentage = 1.0

[sub_resource type="ShaderMaterial" id=3]
shader = ExtResource( 5 )
shader_param/strength = 0.5
shader_param/speed = 0.5
shader_param/angle = 0.0

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0, 0, 1 )
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.247059, 0.396078, 0.192157, 1 )

[node name="MemoryTemplate" groups=["memories"] instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="Label" parent="Signifier" index="0"]
margin_left = 4.0
margin_top = 4.0
margin_right = 40.0
margin_bottom = 40.0
text = ""

[node name="IconContainer" parent="Signifier" index="1"]
margin_left = 2.0
margin_top = 2.0
margin_right = 42.0
margin_bottom = 42.0

[node name="ExtraContainer" parent="Signifier" index="2"]
visible = true
margin_left = 0.0
margin_top = 0.0
margin_right = 45.0
margin_bottom = 45.0

[node name="Icon" parent="Signifier" index="3"]
margin_left = 7.0
margin_top = 7.0
margin_right = 37.0
margin_bottom = 37.0
texture = ExtResource( 3 )
stretch_mode = 6

[node name="Shader" type="ColorRect" parent="Signifier" index="4"]
visible = false
material = SubResource( 1 )
margin_left = 7.0
margin_top = 7.0
margin_right = 37.0
margin_bottom = 37.0
rect_min_size = Vector2( 30, 30 )
mouse_filter = 2

[node name="ActiveHighlight" type="Panel" parent="Signifier" index="5"]
visible = false
material = SubResource( 3 )
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="InactiveHighlight" type="Panel" parent="Signifier" index="6"]
visible = false
margin_left = 5.0
margin_top = 5.0
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 35, 35 )
mouse_filter = 2
custom_styles/panel = SubResource( 2 )

[node name="DetailPanels" parent="Description/VBC" index="1"]
panel_column_threshold = 3

[connection signal="gui_input" from="." to="." method="_on_MemoryTemplate_gui_input"]
